# bazel-bzlmod

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  main.py  requirements_lock_3_11.txt
