module(name = "openai_bazel_example")

bazel_dep(name = "rules_python", version = "1.2.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11")

pip_ext = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# Remove compile() – NOT supported
pip_ext.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock_3_11.txt",
)
use_repo(pip_ext, "pip")
